--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <!--navigation bar along the left hand side-->
         <nav>
             <div class="panel">
-                <h2>learn &#x1D465;</h2>
+                <a href="#"><h2 title="Learn skills from Leo">learn &#x1D465;</h2></a>
                 <ul>
                     <a href="./piano.html"><li class="piano">Piano</li></a>
                     <a href="./woodwork.html"><li class="woodwork">Woodwork</li></a>
-                    <li class="maths">Maths</li>
-                    <li class="football">Football</li>
+                    <a href="./maths.html"><li class="maths">Maths</li></a>
+                    <a href="./football.html"><li class="football">Football</li></a>
                 </ul>
             </div>
             <div id="arrow">&#x1D465;</div>
@@ -29,6 +29,8 @@
         </header>
         <!--main scrollable content-->
         <section class="content">
+            <h2 title="Hello, nice to meet you, good morning, afternooon and evening.">Hello!</h2>
+            <p>Welcome to learn &#x1D465;, where you can liberate the skills within yourself! Take a look of what's on offer and I can help you learn something and have fun.</p>
         </section>
     </body>
 </html>
