--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="./football.html"><li class="football">Football</li></a>
                 </ul>
             </div>
-            <div id="arrow">&#x1D465;</div>
+            <div id="x">&#x1D465;</div>
         </nav>
         <!--header stuck to top-->
         <header>
