loads more work

--- a/woodwork.html
+++ b/woodwork.html
@@ -11,7 +11,7 @@
         <!--navigation bar along the left hand side-->
         <nav>
             <div class="panel">
-                <a href="./index.html"><h2 title="Learn skills from Leo">learn &#x1D465;</h2></a>
+                <a href="./about.html"><h2 title="Learn skills from Leo">learn &#x1D465;</h2></a>
                 <ul>
                     <a href="./piano.html"><li class="piano">Piano</li></a>
                     <a href="#"><li class="woodwork">Woodwork</li></a>
@@ -24,7 +24,7 @@
         <!--header stuck to top-->
         <header>
             <section class="header">
-                <h1>learn &#x1D465;</h1>
+                <a href="./index.html"><h1>learn &#x1D465;</h1></a>
             </section>
         </header>
         <!--main scrollable content-->
