--- a/aboutsubmit.html
+++ b/aboutsubmit.html
@@ -6,6 +6,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+        <script type="text/javascript" src="./resources/js/about.js" defer></script>
     </head>
     <body>
         <!--navigation bar along the left hand side-->
@@ -15,7 +17,7 @@
                 <ul>
                     <a href="./piano.html"><li class="piano">Piano</li></a>
                     <a href="./woodwork.html"><li class="woodwork">Woodwork</li></a>
-                    <a href="#"><li class="maths">Maths</li></a>
+                    <a href="./maths.html"><li class="maths">Maths</li></a>
                     <a href="./football.html"><li class="football">Football</li></a>
                 </ul>
             </div>
@@ -27,10 +29,12 @@
                 <a href="./index.html"><h1>learn &#x1D465;</h1></a>
             </section>
         </header>
-        <!--main scrollable content-->
         <section class="content">
-            <h2>Maths</h2>
-            <p>Numbers? Sums? Long division? If these concepts make your head rattle around, then maybe they need explaining from a different perspective.</p>
+            <h2 title="Hello, nice to meet you, good morning, afternooon and evening.">Thanks for saying hi!</h2>
+            <div class="result">
+                <article id="result"></article><br>
+                <a id="reinput" href="./about.html#form"></a>
+            </div>
         </section>
     </body>
 </html>
